gateway-dev.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: istio-gateway-dev
    namespace: dev
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - '*.dev.example.com'
      - hello1.example.com
      port:
        name: http
        number: 80
        protocol: HTTP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
